# tag-std

./: .gitignore  Asterinas-pre-RFC.md  usage.md
.github/workflows/: tests.yml
demo/rustc_driver/: Cargo.toml  run.sh
demo/rustc_driver/assets/: query.sql
demo/rustc_driver/safety-tool-lib/tests/snapshots/: testcase_property.rs
demo/rustc_driver/safety-tool-parser/src/property_attr/: mod.rs  property.rs
demo/rustc_driver/src/: logger.rs  main.rs
demo/rustc_driver/src/analyze_hir/: db.rs  mod.rs  reachability.rs  visit.rs
demo/rustc_driver/src/analyze_hir/db/: data.rs  mod.rs  storage.rs
demo/rustc_driver/tests/: unsafe_calls.rs
demo/rustc_driver/tests/basic/macro-expanded/: cargo-safe-tool.txt  lib.rs
demo/rustc_driver/tests/basic/src/: lib.rs  main.rs
demo/rustc_driver/tests/snapshots/: unsafe_calls.txt  unsafe_calls_method.txt  unsafe_calls_panic_assign.txt  unsafe_calls_panic_assign_fn_ptr.txt  unsafe_calls_panic_method.txt  unsafe_calls_panic_no_tag.txt  unsafe_calls_panic_with_dep.txt  unsafe_calls_with_dep.txt
demo/rustc_driver/tests/snippets/: unsafe_calls.rs  unsafe_calls_method.rs  unsafe_calls_panic_assign.rs  unsafe_calls_panic_assign_fn_ptr.rs  unsafe_calls_panic_method.rs  unsafe_calls_panic_no_tag.rs  unsafe_calls_panic_with_dep.rs  unsafe_calls_with_dep.rs
safety-tool/assets/: sp-rust-for-linux.toml
safety-tool/tests/: configuration.rs  unsafe_calls.rs
safety-tool/tests/call_order/: ok1.rs
safety-tool/tests/snapshots/: any_err.txt  any_err_2.txt  any_ok.txt  any_ok_2.txt  duplicated_discharge.txt  unsafe_calls.txt  (+9 more)
(+7 files in other folders)
